# looper

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  PERFORMANCE_FIX_SUMMARY.md  PERFORMANCE_REPORT.md  README.md  WORKLOG.md
.claude/: settings.local.json
.github/workflows/: release.yml
bench/: QUICKSTART.md  README.md  SETUP_COMPLETE.md  test-fix.sh
bench/results/: playback_20260421_100624.csv  startup_20260421_100619.txt
bench/scripts/: analyze-results.sh  bench-pause.sh  bench-playback.sh  bench-startup.sh  cpu-profile.sh  full-profile.sh  memory-profile.sh  watch-memory.sh
docs/: RELEASE_CHECKLIST.md  development.md  installation.md  now-playing.md  playback.md  spotify.md  sync.md  usage.md
docs/plans/: 2026-04-15-download-ui-design.md  2026-04-15-download-ui-implementation-plan.md  2026-04-16-default-history-startup-design.md  2026-04-16-paused-wave-design.md  2026-04-16-paused-wave-implementation-plan.md  2026-04-16-terminal-title-design.md  2026-04-16-terminal-title-implementation-plan.md  2026-06-15-arrow-key-seek-design.md  2026-06-15-loading-screen-polish-design.md
docs/superpowers/plans/: 2026-07-03-spotify-search.md
docs/superpowers/specs/: 2026-07-03-spotify-search-design.md
migrations/2026-04-16-000001_create_played_tracks/: down.sql  up.sql
migrations/2026-04-16-000002_add_total_play_seconds/: down.sql  up.sql
migrations/2026-04-30-000003_add_computer_name/: down.sql  up.sql
migrations/2026-07-05-000004_add_kind/: down.sql  up.sql
scripts/: render-formula.sh
src/: audio.rs  download.rs  lib.rs  macos_runloop.rs  main.rs  media_controls.rs  play_loop.rs  playback_input.rs  schema.rs  startup_logo.rs  storage.rs  tui.rs
src/plugin/: hypem.rs  mod.rs  soundcloud.rs  youtube.rs  ytdlp.rs
src/spotify/: mod.rs  search.rs  sink.rs
tests/: integration.rs
