[package]
name = "looper"
version = "0.5.3"
authors = ["Kevin B. Ridgway <kridgway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "looper"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
color-eyre = "0.6.1"
crossterm = "0.29"
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = "2"
libc = "0.2"
directories = "3.0.2"
ratatui = "0.30"
serde_json = "1"
spectrum-analyzer = "1.7"
stream-download = { version = "0.22", features = ["process"] }
symphonia = { version = "0.5", default-features = false }
rodio = { version = "0.17", features = ["mp3", "symphonia-wav"] }
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
structopt = "0.3.21"
tokio = { version = "1", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[dev-dependencies]
assert_cmd = "1.0.5"
tempfile = "3"
