[package]
name = "looper"
version = "0.12.0"
authors = ["Kevin B. Ridgway <kridgway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "looper"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
color-eyre = "0.6.1"
crossterm = "0.29"
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = "2"
libc = "0.2"
directories = "3.0.2"
ratatui = "0.30"
ratatui-image = { version = "10.0.8", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
# Already in the tree transitively; the direct dep only enables `derive` for
# the Spotify search response types.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spectrum-analyzer = "1.7"
stream-download = { version = "0.22", features = ["process"] }
# Blocking HTTP client for the HypeM artwork scrape (its yt-dlp extractor
# exposes no thumbnail). Uses the same native-tls backend already pulled in by
# stream-download's reqwest, so `blocking` is purely additive.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
symphonia = { version = "0.5", default-features = false }
rodio = { version = "0.22", default-features = false, features = ["playback", "mp3", "wav", "flac", "vorbis"] }
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
structopt = "0.3.21"
tokio = { version = "1", features = ["rt-multi-thread"] }
# Spotify playback. `librespot-playback` has default-features off on purpose:
# it keeps the bundled (older) rodio audio backend out of the tree so there is
# only one rodio. We feed librespot's decoded PCM through our own custom Sink
# (src/spotify/sink.rs) instead.
#
# NOTE: `vergen` is pinned to 9.0.6 in Cargo.lock. librespot-core's build script
# pulls vergen-gitcl 1.0.8 (which needs vergen ^9.0.6), but vergen 9.1.0 bumps
# its internal vergen-lib to 9.x and collides with vergen-gitcl's vergen-lib
# 0.1.6, breaking the build. If `cargo update` ever reintroduces vergen 9.1.0,
# re-pin with: cargo update -p vergen --precise 9.0.6
librespot-core = "0.8"
librespot-metadata = "0.8"
librespot-oauth = "0.8"
librespot-playback = { version = "0.8", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[dev-dependencies]
assert_cmd = "1.0.5"
tempfile = "3"
